[package]
authors = ["Andre Bogus <bogusandre@gmail.com>"]
categories = ["data-structures"]
description = "Wrapper for SmallVec that writes out capacity information"
keywords = ["small", "vec", "vector", "stack", "no_std", "tuning"]
license = "MIT/Apache-2.0"
name = "smallvectune"
repository = "https://github.com/llogiq/smallvectune"
version = "0.0.1"

[dependencies]
smallvec = "0.6.5"

[dev-dependencies]
rand = "0.5.5"

[features]
default = ["std"]
std = ["smallvec/std"]
union = ["smallvec/union"]
