[package]
authors = ["Andre Bogus <bogusandre@gmail.com>"]
categories = ["data-structures"]
description = "Wrapper for SmallVec that writes out capacity information"
keywords = ["small", "vec", "vector", "stack", "tuning"]
license = "MIT/Apache-2.0"
name = "smallvectune"
repository = "https://github.com/llogiq/smallvectune"
version = "0.0.1"

[dependencies]
crossbeam-channel = "0.2.5"
lazy_static = "1.0"
smallvec = "0.6.5"

[dev-dependencies]
rand = "0.5.5"

[features]
id = []
default = ["std", "id"]
std = ["smallvec/std"]
union = ["smallvec/union"]
